...
        <Typography color='primary' size='title'>PitchTalk</Typography>
        <Typography color='secondary' size='md'>Your Music Education Companion</Typography>
      </Animated.View>

      <Animated.View style={[styles.button, buttonStyle]}>
        <Button onPress={() => router.replace('login')} color='primary'>
          <Typography color='white' size='md'>Get Started</Typography>
        </Button>
      </Animated.View>
    </View>
  )
}

...
